This file describes the changes to the Log for C++ library. See the CVS repository for more detailed descriptions.

2002-10-26 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* Release as 0.3.3.
	
	* include/log4cpp/config-win32.h, src/PortabilityImpl.hh,
	src/Makefile.am: worked around header definition bug in MSVC by
	aliasing cstdlib/cstring functions in 'std::'. See #628211.

	* src/NDC.cpp: added parentheses to return statement in _get() as
	suggested by Derrick Hastings to fix #415160.

	* include/log4cpp/PattenLayout.hh, src/PatternLayout.cpp: added
	default conversion patterns.

	* msvc6/log4cppDLL/Makefile.in: removed.

2002-10-19 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/PatternLayout.hh, src/PatternLayout.cpp: 
	replaced PatternLayout implementation: it now preparses the message
	format for quicker layouting and implements format specifiers, 
	e.g. '%-5p'.
	* tests/testPattern.cpp: added tests for format specifiers and more.

2002-10-10 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/threading/MSThreads.hh: added #include<string>

2002-10-05 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* log4cpp.spec.in: don't require log4cpp for log4cpp-doc.

	* doc/Makefile.am: fix install location.	

	* Makefile.am: use 'rpmbuild' instead of 'rpm'. 

2002-10-05 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* release as 0.3.2

	* doc/html/index.html: added notes for 0.3.2 and 0.3.2rc5
	
	* configure.in, msvc6/Makefile.am, msvc6/testDLL/Makefile.am,
	msvc6/testMain/Makefile.am, msvc6/testNTEventLog/Makefile.am,
	msvc6/testPattern/Makefile.am: added missing makefiles.

2002-09-26 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* src/StringUtil.hh: fix compilation problem on Sun CC 5.3 
	(bug #614903).
	
2002-09-18 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* src/RemoteSyslogAppender.cpp: fixed log facility in _append(), as
	reported by Derek Atkins.

	* src/PropertyConfiguratorImpl.cpp, src/SimpleConfigurator.cpp: