@@ -7,7 +7,7 @@
     <OBJFILES value="SyslogAppender.obj RemoteSyslogAppender.obj AppenderSkeleton.obj 
       BasicLayout.obj Category.obj FileAppender.obj RollingFileAppender.obj Filter.obj 
       FixedContextCategory.obj HierarchyMaintainer.obj IdsaAppender.obj 
-      LayoutAppender.obj Log4cppCleanup.obj LoggingEvent.obj NDC.obj 
+      LayoutAppender.obj LoggingEvent.obj NDC.obj 
       OstreamAppender.obj PortabilityImpl.obj Priority.obj SimpleLayout.obj 
       StringQueueAppender.obj Appender.obj CategoryStream.obj TimeStamp.obj 
       Win32DebugAppender.obj PatternLayout.obj Configurator.obj ConfiguratorSkeleton.obj
